k3d/manifests/app-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: app
spec:
  headers:
    accessControlAllowMethods:
      - 'GET'
    accessControlAllowOriginList:
      - '*'
    accessControlMaxAge: 100
    addVaryHeader: true
    customResponseHeaders:
      cacheControl: 'no-cache'
