k3d/manifests/geoserver-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: geoserver
spec:
  headers:
    accessControlAllowMethods:
      - 'GET'
    accessControlAllowOriginList:
      - '*'
    accessControlMaxAge: 100
    addVaryHeader: true
