k3d/manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 12345
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: api
          image: fredmoser/mapx_api:1.11.0-alpha.2
          ports:
            - containerPort: 3030
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          volumeMounts:
            - name: mx-shared
              mountPath: /shared
      volumes:
        - name: mx-shared
          persistentVolumeClaim:
            claimName: mx-shared
