k3d/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 12345
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: app
          image: fredmoser/mapx_app:1.11.0-alpha.2
          ports:
            - containerPort: 3838
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          volumeMounts:
            - name: mx-shared
              mountPath: /shared
      volumes:
        - name: mx-shared
          persistentVolumeClaim:
            claimName: mx-shared
