k3d/manifests/geoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: geoserver
  name: geoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: geoserver
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 66712
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: geoserver
          image: fredmoser/geoserver:2.22.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "4Gi"
              cpu: "250m"
            limits:
              memory: "4Gi"
              cpu: "1000m"
          volumeMounts:
            - name: geoserver
              mountPath: /geoserver/db
      volumes:
        - name: geoserver
          persistentVolumeClaim:
            claimName: geoserver
