k3d/manifests/routines-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: routines
  name: routines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routines
  template:
    metadata:
      labels:
        app: routines
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 12345
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - image: fredmoser/mapx_api:1.11.0-alpha.2
          name: routines
          args:
            - node
            - /api/routines.js
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "2000m"
