k3d/manifests/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: search
  name: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: search
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 89129
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: search
          image: fredmoser/meili:0.20.0-alpine
          ports:
            - containerPort: 7700
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          volumeMounts:
            - name: meili
              mountPath: /data.ms
      volumes:
        - name: meili
          persistentVolumeClaim:
            claimName: meili
