k3d/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  selector:
    app: api
  ports:
    - port: 3030
      targetPort: 3030
