k3d/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 3838
      targetPort: 3838
