k3d/manifests/geoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: geoserver
  name: geoserver
spec:
  selector:
    app: geoserver
  ports:
    - port: 9000
      targetPort: 8080
