k3d/manifests/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: search
  name: search
spec:
  selector:
    app: search
  ports:
    - port: 7700
      targetPort: 7700
