k3d/manifests/app-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app
  labels:
    app: app
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`app.mapx.local`)
    services:
    - name: app
      port: 3838
    middlewares:
      - name: app
